<resources>
    <string name="app_name">MiPokedex_RamirezRuben</string>
    <string name="pokemon_name">Pikachu</string>
    <string name="pokemon_number">#025</string>
    <string name="pokemon_tipo">Eléctrico</string>
    <string name="pokemon_altura_text">Altura</string>
    <string name="pokemon_altura_number">0,4m</string>
    <string name="pokemon_habilidad_text">Habilidad</string>
    <string name="pokemon_habilidad_resultado">Elec. Estatica</string>
    <string name="pokemon_peso_text">Peso</string>
    <string name="pokemon_peso_num">6,0kg</string>
    <string name="pokemon_description_text">Cuando se enfada, este Pokémon descarga la energía que almacena en el interior de las bolsas de las mejillas.</string>
    <string name="pokemon_name_number_left">Arbok N.° 0024</string>
    <string name="pokemon_name_number_right">Raichu N.° 0026</string>
</resources>