<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNamePokemon"
        style="@style/title_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/pokemon_name"
        app:layout_constraintEnd_toStartOf="@+id/ivPokeball"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/title_pokemon_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pokemon_number"
        app:layout_constraintEnd_toStartOf="@+id/ivPokeball"
        app:layout_constraintTop_toBottomOf="@+id/tvNamePokemon" />

    <ImageView
        android:id="@+id/ivPokeball"
        android:layout_width="275dp"
        android:layout_height="208dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvNamePokemon"
        app:layout_constraintTop_toBottomOf="@+id/ivFavorite"
        app:srcCompat="@drawable/pokeball_png" />

    <ImageView
        android:id="@+id/ivFavorite"
        android:layout_width="59dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/favorite_star" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_bottom_sheet"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineMedium"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginEnd="16dp"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_name_number_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/tvHabilidadDescr"
            style="@style/pokemon_descripcion_atributos_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="37dp"
            android:text="@string/pokemon_habilidad_resultado"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAlturaNum"
            app:layout_constraintTop_toBottomOf="@+id/tvHabilidadText"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvPesoNum"
            style="@style/pokemon_descripcion_atributos_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pokemon_peso_num"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHabilidadDescr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPesoText"
            app:layout_constraintTop_toBottomOf="@+id/tvAlturaNum"
            app:layout_constraintVertical_bias="0.024" />

        <TextView
            android:id="@+id/tvPesoText"
            style="@style/pokemon_descripcion_atributos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pokemon_peso_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPesoNum"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlturaText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvTipoPk"
            style="@style/title_pokemon_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_pokemon_tag"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/pokemon_tipo"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAlturaNum"
            style="@style/pokemon_descripcion_atributos_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pokemon_altura_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHabilidadText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvAlturaText"
            app:layout_constraintTop_toBottomOf="@+id/tvTipoPk"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvHabilidadText"
            style="@style/pokemon_descripcion_atributos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pokemon_habilidad_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvAlturaNum"
            app:layout_constraintTop_toBottomOf="@+id/tvTipoPk"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvAlturaText"
            style="@style/pokemon_descripcion_atributos"
            android:layout_width="80dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:text="@string/pokemon_altura_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvAlturaNum"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTipoPk"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView8"
            style="@style/pokemon_descripcion_text"
            android:layout_width="252dp"
            android:layout_height="98dp"
            android:layout_marginTop="24dp"
            android:text="@string/pokemon_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPesoNum" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="76dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"

            app:layout_constraintBottom_toTopOf="@+id/imageView"

            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/arbok_poke" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="115dp"
            android:layout_height="84dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView8"

            app:layout_constraintBottom_toTopOf="@+id/imageView6"

            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/raichu" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_name_number_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="212dp"
        android:layout_height="188dp"
        app:layout_constraintBottom_toTopOf="@+id/infoContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoContainer"
        app:srcCompat="@drawable/pikachu" />

</androidx.constraintlayout.widget.ConstraintLayout>
